--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>BOTANIK</title>
+    <title>ASPEN VALLEY LAW</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css
@@ -25,7 +25,12 @@
     <nav class="navbar navbar-expand-lg bg-white sticky-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img src="./assets/images/logo-dark.svg" alt="logo" width="100%" />
+          <img
+            src="./assets/images/logo-mid.png"
+            alt="logo"
+            width="100%"
+            id="logo"
+          />
         </a>
         <button
           class="navbar-toggler"
@@ -59,13 +64,10 @@
               <a class="nav-link" href="#speakers">Speakers</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#contact">Contact</a>
-            </li>
-            <li class="nav-item">
               <a class="nav-link" href="#news">News</a>
             </li>
           </ul>
-          <a href="#" class="btn btn-brand ms-lg-3">Tickets</a>
+          <a href="#contact" class="btn btn-brand ms-lg-3">Contact</a>
         </div>
       </div>
     </nav>
@@ -73,20 +75,29 @@
     <!-- hero -->
     <section id="hero" class="min-vh-100 d-flex align-items-center text-center">
       <div class="container">
+        <video
+          id="background-video"
+          autoplay
+          loop
+          muted
+          poster="../images/hero-bg.jpg"
+        >
+          <source src="./assets/images/vid.mp4" type="video/mp4" />
+        </video>
         <div class="row">
           <div class="col-12">
             <h1
               class="text-uppercase text-white fw-semibold display-1"
               data-aos="fade-right"
             >
-              Welcome to Botanik
+              ASPEN VALLEY LAW
             </h1>
             <h2 class="text-white mt-3 mb-4" data-aos="fade-left">
-              GREEN THUMBS UNITE
+              PROFESSIONAL CORPORATION
             </h2>
             <div class="'hero-btns" data-aos="fade-up">
-              <a href="#" class="btn btn-light me-2">EXPLORE</a>
-              <a href="#" class="btn btn-brand ms-2">TICKETS</a>
+              <a href="#" class="btn btn-light me-2">OUR TEAM</a>
+              <a href="#contact" class="btn btn-brand ms-2">CONTACT</a>
             </div>
           </div>
         </div>
@@ -103,12 +114,12 @@
             data-aos-delay="50"
           >
             <div class="section-title">
-              <h1 class="display-4 fw-semibold">ABOUT BOTANIK</h1>
+              <h1 class="display-4 fw-semibold">ABOUT AVL</h1>
               <div class="line"></div>
               <p>
-                Imagine some of the most inspired and provocative researchers,
-                artists, business people, teachers, healers and other leaders in
-                the world of botany — all gathered in a single place.
+                Aspen Valley Law, P.C. is a boutique law office located in
+                Carbondale, Colorado, representing clients in our local mountain
+                community and beyond.
               </p>
             </div>
           </div>
@@ -118,47 +129,45 @@
             <img src="./assets/images/about.jpg" alt="about" />
           </div>
           <div class="col-lg-5" data-aos="fade-down" data-aos-delay="150">
-            <h1 class="abouth1">A gathering of minds.</h1>
+            <h1 class="abouth1">A team you can trust.</h1>
             <p class="mt-3 mb-4">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Consequatur veniam officia provident ipsam dolor non suscipit eos.
-              In obcaecati numquam itaque earum molestiae, mollitia debitis,
-              corrupti, excepturi voluptatibus eos delectus! Lorem ipsum dolor
-              sit amet consectetur adipisicing elit. Consequatur veniam officia
-              provident ipsam dolor non suscipit eos. In obcaecati numquam
-              itaque earum molestiae, mollitia debitis, corrupti, excepturi
-              voluptatibus eos delectus!Lorem ipsum dolor sit amet consectetur
-              adipisicing elit. Consequatur veniam officia provident
+              Our Legal Team recognizes and values the implications that our
+              work has in the lives of our clients and their families,
+              businesses, and communities. For that reason, we are committed to
+              achieving client-focused, creative solutions for even the most
+              complex and contentious matters.
             </p>
 
             <div class="d-flex pt-4 mb-3">
-              <div class="iconbox me-4">
+              <div class="iconbox me-4 bg-light">
                 <i class="ri-leaf-line"></i>
               </div>
 
               <div>
-                <h5 class="abouth5">Common Ground</h5>
-                <p>Consectetur adipisicing elit. Ut ducimus soluta pariatur.</p>
+                <h5 class="abouth5">Integrity</h5>
+                <p>Our priority is you.</p>
               </div>
             </div>
             <div class="d-flex mb-3">
-              <div class="iconbox me-4">
+              <div class="iconbox me-4 bg-light">
                 <i class="ri-group-2-line"></i>
               </div>
 
               <div>
-                <h5 class="abouth5">Power in Numbers</h5>
-                <p>Consectetur adipisicing elit. Ut ducimus soluta pariatur.</p>
+                <h5 class="abouth5">Expertise</h5>
+                <p>We only offer the best to our clients.</p>
               </div>
             </div>
             <div class="d-flex">
-              <div class="iconbox me-4">
+              <div class="iconbox me-4 bg-light">
                 <i class="ri-sun-line"></i>
               </div>
 
               <div>
-                <h5 class="abouth5">A Brighter Future</h5>
-                <p>Consectetur adipisicing elit. Ut ducimus soluta pariatur.</p>
+                <h5 class="abouth5">Compassion</h5>
+                <p>
+                  We take pride in handling our cases with the utmost delicacy.
+                </p>
               </div>
             </div>
           </div>
@@ -167,7 +176,7 @@
     </section>
 
     <!-- offerings -->
-    <section id="offerings" class="section-padding border-top">
+    <section id="offerings" class="section-padding border-top bg-light">
       <div class="container">
         <div class="row">
           <div
@@ -176,11 +185,11 @@
             data-aos-delay="150"
           >
             <div class="section-title">
-              <h1 class="display-4 fw-semibold">OFFERINGS</h1>
+              <h1 class="display-4 fw-semibold">AREAS OF PRACTICE</h1>
               <div class="line"></div>
               <p>
-                Botanik has many offerings that make the experience
-                multidemnional and unforgettable.
+                Aspen Valley Law covers a wide variety of cases, and our areas
+                of practice are expanding rapidly.
               </p>
             </div>
           </div>
